ipc/ipdl/test/ipdl/ok/actorparam.ipdl
protocol actorparam {

child: async Msg(actorparam p);

};
