ipc/ipdl/test/ipdl/error/intrParentToChild.ipdl
intr protocol intrParentToChild {

    // can't declare interrupt parent-to-child messages
child: intr Msg();

};
